--- a/push_swap/TODO
+++ b/push_swap/TODO
@@ -2,14 +2,14 @@
 #PDF 문서에도 입력 값 유효성 검사 및 에러 처리에 대한 언급이 있습니다.
 #입력 값이 정수인지 확인, 범위 초과 및 중복 검사 후 유효한 값을 스택 A에 저장하는 부분이 명확히 정의되어 있습니다.
 
-2. 명령어 구현 (push_swap_utils.c)
-PDF에 명령어 설명이 동일하게 나와 있습니다. pa, pb, ra, rb 등은 작업 리스트와 일치합니다.
+#2. 명령어 구현 (push_swap_utils.c)
+#PDF에 명령어 설명이 동일하게 나와 있습니다. pa, pb, ra, rb 등은 작업 리스트와 일치합니다.
 
-3. 스택 유틸리티 (stack_utils.c)
-PDF 문서에서 스택 관련 함수나 메모리 관리에 대한 직접적인 언급은 없으나, 프로젝트 요구사항에 따라 추가 구현이 필요함을 암시합니다.
+#3. 스택 유틸리티 (stack_utils.c)
+#PDF 문서에서 스택 관련 함수나 메모리 관리에 대한 직접적인 언급은 없으나, 프로젝트 요구사항에 따라 추가 구현이 필요함을 암시합니다.
 
-4. 유틸리티 함수 (utils.c)
-작업 리스트에 ft_putstr_fd와 ft_atoi 구현이 명시되어 있으나, PDF에는 언급이 없습니다. 이는 사용자의 추가 정의로 보입니다.
+#4. 유틸리티 함수 (utils.c)
+#작업 리스트에 ft_putstr_fd와 ft_atoi 구현이 명시되어 있으나, PDF에는 언급이 없습니다. 이는 사용자의 추가 정의로 보입니다.
 
 5. 정렬 알고리즘 구현 (push_swap_algorithm.c)
 PDF는 스택 A를 정렬하는 프로그램의 최적화 목표를 강조하며, 퀵소트와 같은 알고리즘 선택에 대한 직접적인 지침은 없습니다. 사용자 리스트의 세부 내용은 알고리즘 설계의 방향성을 잘 제시합니다.
