--- a/so_long/Todo
+++ b/so_long/Todo
@@ -49,3 +49,10 @@ MiniLibX의 리소스(mlx_destroy_window(), mlx_destroy_image())를 올바르게
 ✅ 3. UI 개선 (움직인 횟수, 남은 아이템 표시)
 ✅ 4. 창 크기 조절 기능 개선 (mlx_loop_hook() 활용 가능)
 ✅ 5. 코드 최적화 및 메모리 해제 (마지막 단계에서 점검)
+
+
+
+1. 이동 횟수 표시
+2. 출구에 들어갔을 때 게임 종료 필요
+3. 출구, 수집품 을 좀더 알아보기 쉬운 이미지로 변경(마리오)??
+4. 할 수 있다면 굼바로 적 넣기, 굼바에 닿았을 때 게임 종료
